# openvr-battery-monitoring

./: .gitignore  LICENSE  README.md  battery_reader.py  main.py  pyproject.toml  setup.py
assets/: icon.psd
lib/: battery_reader.py  config.py  ovrt_notifier.py
