[project]
name = "openvr-battery-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "cx-freeze>=8.4.1",
    "deepmerge>=2.0",
    "desktop-notifier>=6.2.0",
    "openvr>=2.12.1401",
    "playsound3>=3.3.0",
    "pydantic>=2.12.0",
    "pystray>=0.19.5",
    "websockets>=15.0.1",
]

[[tool.mypy.overrides]]
module = ["openvr.*", "pystray.*", "cx_Freeze.*", "appdirs.*"]
follow_untyped_imports = true
